--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://phoenixcrm.local
 APP_LOG=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=phoenixcrm
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
