--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,23 @@
 /node_modules
 .env
 storage/debugbar/
-app/Modules
 config/cms.*.php
-themes/
 public/themes/*/
 public/modules/*/
 database/migrations/
 !resources/lang/en/
 resources/lang/*
 storage/
+/composer.lock
+/.phpstorm.meta.php
+/_ide_helper.php
+/.idea
+/.project
+tests/_output/
+tests/_bootstrap.php
+tests/_support/_generated/
+
+# composer stuff
+/c3.php
+
+_ide_helper.php
